--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "apollo3-cache-persist": "^0.9.1",
     "bip21": "^2.0.2",
     "bitcoinjs-lib": "^5.1.10",
-    "bolt11": "https://github.com/nicolasburtey/bolt11#master",
+    "bolt11": "^1.3.2",
     "buffer": "^6.0.3",
     "currency.js": "^2.0.2",
     "graphql": "^15.5.0",
@@ -60,12 +60,12 @@
     "lodash.sumby": "^4.6.0",
     "lodash.tointeger": "^4.0.4",
     "lodash.tonumber": "^4.0.3",
-    "lottie-ios": "3.1.9",
+    "lottie-ios": "3.2.3",
     "lottie-react-native": "^4.0.2",
     "moment": "^2.24.0",
     "node-libs-react-native": "^1.2.1",
     "ramda": "0.27.1",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-apollo-network-status": "^5.0.1",
     "react-content-loader": "^5.0.2",
     "react-dom": "^17.0.1",
@@ -135,7 +135,7 @@
     "@types/jest": "^26.0.16",
     "@types/lodash": "^4.14.150",
     "@types/prettier": "^2.3.2",
-    "@types/ramda": "0.27.32",
+    "@types/ramda": "0.27.45",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.9",
     "@types/react-native": "^0.63.37",
@@ -148,7 +148,7 @@
     "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-native-version-number": "^0.3.5",
     "@types/react-test-renderer": "^17.0.0",
-    "@types/rimraf": "3.0.1",
+    "@types/rimraf": "3.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "babel-core": "7.0.0-bridge.0",
@@ -177,15 +177,15 @@
     "metro-react-native-babel-preset": "^0.64.0",
     "mock-apollo-client": "^1.2.0",
     "npm-run-all": "4.1.5",
-    "patch-package": "6.2.2",
+    "patch-package": "6.4.7",
     "postinstall-prepare": "1.0.1",
     "prettier": "^2.3.1",
     "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.1",
-    "react-devtools-core": "4.10.0",
+    "react-devtools-core": "4.18.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-powerplug": "1.0.0",
-    "react-test-renderer": "17.0.1",
+    "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
     "solidarity": "^3.0.0",
     "ts-jest": "^26.1.4",
