Remove unused dependencies

--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@react-navigation/stack": "^5.12.8",
     "@remobile/react-native-qrcode-local-image": "nicolasburtey/react-native-qrcode-local-image.git#master",
     "apollo3-cache-persist": "^0.9.1",
-    "bip21": "^2.0.2",
     "bitcoinjs-lib": "^5.1.10",
     "bolt11": "^1.3.2",
     "buffer": "^6.0.3",
@@ -86,7 +85,6 @@
     "react-native-maps": "0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-phone-input": "^0.2.4",
-    "react-native-progress": "^4.0.3",
     "react-native-push-notification": "^7.3.1",
     "react-native-qrcode-svg": "^6.0.6",
     "react-native-reanimated": "^1.7.0",
@@ -104,40 +102,28 @@
     "react-native-version-number": "^0.3.6",
     "react-native-walkthrough-tooltip": "^1.2.0",
     "react-native-youtube": "^2.0.0",
-    "tempy": "^1.0.0",
     "url": "^0.11.0",
     "victory-native": "^35.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-optional-catch-binding": "^7.8.3",
-    "@babel/preset-typescript": "^7.12.7",
-    "@babel/runtime": "^7.8.4",
-    "@emotion/core": "^11.0.0",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/runtime": "^7.15.4",
     "@storybook/addon-actions": "^6.1.9",
     "@storybook/addon-knobs": "^6.1.9",
     "@storybook/addon-ondevice-actions": "^5.3.18",
     "@storybook/addon-ondevice-knobs": "^5.3.25",
-    "@storybook/addon-storyshots": "^6.1.9",
     "@storybook/react-native": "^5.3.17",
     "@storybook/react-native-server": "^5.3.17",
     "@testing-library/jest-native": "^4.0.2",
     "@testing-library/react-native": "^7.2.0",
-    "@types/babel-core": "6.25.7",
-    "@types/babel__core": "^7.1.15",
-    "@types/bip21": "^1.1.31",
     "@types/detox": "^17.14.2",
     "@types/eslint": "^7.28.0",
-    "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/i18n-js": "^3.8.2",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.150",
-    "@types/prettier": "^2.3.2",
     "@types/ramda": "0.27.45",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.9",
     "@types/react-native": "^0.65.1",
     "@types/react-native-maps": "0.24.2",
     "@types/react-native-phone-input": "^0.2.2",
@@ -148,7 +134,6 @@
     "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-native-version-number": "^0.3.5",
     "@types/react-test-renderer": "^17.0.0",
-    "@types/rimraf": "3.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "babel-core": "7.0.0-bridge.0",
@@ -156,20 +141,11 @@
     "babel-loader": "^8.2.2",
     "csv-parse": "^4.8.9",
     "detox": "^18.21.0",
-    "emotion-theming": "^11.0.0",
     "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-native": "^3.11.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "ignite-bowser": "^5.2.1",
     "jest": "^27.2.3",
     "jest-circus": "^27.2.3",
     "jetifier": "^2.0.0",
@@ -180,10 +156,8 @@
     "patch-package": "6.4.7",
     "postinstall-prepare": "2.0.0",
     "prettier": "^2.3.1",
-    "prettier-eslint-cli": "^5.0.1",
     "react-devtools-core": "4.18.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-powerplug": "1.0.0",
     "react-test-renderer": "17.0.2",
     "rimraf": "3.0.2",
     "solidarity": "^3.0.0",
