--- a/package.json
+++ b/package.json
@@ -154,6 +154,7 @@
     "mock-apollo-client": "^1.2.0",
     "npm-run-all": "4.1.5",
     "patch-package": "6.4.7",
+    "pod-install": "^0.1.27",
     "postinstall-prepare": "2.0.0",
     "prettier": "^2.3.1",
     "react-devtools-core": "4.18.0",
